add_executable(Timer_test Timer_test.cc)
target_link_libraries(Timer_test wethands)

add_executable(EventLoop_test EventLoop_test.cc)
target_link_libraries(EventLoop_test wethands)

add_executable(EventLoopThread_test EventLoopThread_test.cc)
target_link_libraries(EventLoopThread_test wethands)

add_executable(EventLoopThreadPool_test EventLoopThreadPool_test.cc)
target_link_libraries(EventLoopThreadPool_test wethands)
