add_executable(Copyable_test Copyable_test.cc)
target_link_libraries(Copyable_test wethands)

add_executable(operators_test operators_test.cc)
target_link_libraries(operators_test wethands)

add_executable(Timestamp_test Timestamp_test.cc)
target_link_libraries(Timestamp_test wethands)

add_executable(BlockingQueue_test BlockingQueue_test.cc)
target_link_libraries(BlockingQueue_test wethands)

add_executable(FileUtil_test FileUtil_test.cc)
target_link_libraries(FileUtil_test wethands)
